[gd_scene load_steps=6 format=3 uid="uid://kmbgcemcb7pq"]

[ext_resource type="Script" uid="uid://d1mpi644q4ifh" path="res://scripts/menus/game_over_menu.gd" id="1_7577y"]
[ext_resource type="FontFile" uid="uid://t8h1shroylrt" path="res://fonts/monogram.ttf" id="1_nkn1p"]
[ext_resource type="Texture2D" uid="uid://dhw812gad1uxq" path="res://img/nice.png" id="3_d38kx"]
[ext_resource type="Texture2D" uid="uid://bwegwuvsuscf4" path="res://img/nice2.png" id="4_2410i"]
[ext_resource type="Texture2D" uid="uid://cn4myld4ei6wk" path="res://img/nice3.png" id="5_xcxcm"]

[node name="GameOverMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7577y")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -535.0
offset_top = -2.0
offset_right = 536.0
offset_bottom = 478.0
grow_horizontal = 2

[node name="Label" type="Label" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_nkn1p")
theme_override_font_sizes/font_size = 64
text = "GAME OVER"

[node name="ScoreLabel" type="Label" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_nkn1p")
theme_override_font_sizes/font_size = 64
text = "SCORE: N/A"

[node name="Button" type="Button" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("1_nkn1p")
theme_override_font_sizes/font_size = 64
text = "  TRY AGAIN  "

[node name="VictoryGraphics" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="VictoryGraphics"]
layout_mode = 0
offset_left = 822.0
offset_top = 214.0
offset_right = 1433.0
offset_bottom = 928.0
scale = Vector2(0.375, 0.375)
texture = ExtResource("3_d38kx")

[node name="TextureRect2" type="TextureRect" parent="VictoryGraphics"]
layout_mode = 0
offset_right = 442.0
offset_bottom = 473.0
scale = Vector2(0.375, 0.375)
texture = ExtResource("4_2410i")

[node name="TextureRect3" type="TextureRect" parent="VictoryGraphics"]
layout_mode = 0
offset_right = 569.0
offset_bottom = 532.0
scale = Vector2(0.375, 0.375)
texture = ExtResource("5_xcxcm")

[node name="TextureRect4" type="TextureRect" parent="VictoryGraphics"]
layout_mode = 0
offset_right = 569.0
offset_bottom = 532.0
scale = Vector2(0.375, 0.375)
texture = ExtResource("5_xcxcm")

[connection signal="pressed" from="PanelContainer/Button" to="." method="_on_button_pressed"]
